#INCLUDE_DIRECTORIES(./include/)

set(CMAKE_CXX_FLAGS "-D_EXPORT")
ADD_DEFINITIONS(-D_EXPORT)
#get_property(HEADERS_LIST GLOBAL PROPERTY "HEADERS_LIST" )

#add_library(Util STATIC ${SRC_LIST} ${HEADERS_LIST})

#TARGET_LINK_LIBRARIES(Util ${LIBS})

#add_library(CTT STATIC ${SRC_LIST} ${PLATFORM_SRC_LIST})
#set_property(TARGET Util PROPERTY CXX_STANDARD 11)
#set_target_properties(Util PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_OUTPUT_DIRECTORY}")
